--- a/opmaak.css
+++ b/opmaak.css
@@ -1,8 +1,8 @@
 body {
-  background-color: lightblue;
+  background-color: rgb(9, 181, 239);
 }
 
 h1 {
-  color: navy;
+  color: rgb(243, 8, 47);
   margin-left: 20px;
 }
