--- a/opmaak.css
+++ b/opmaak.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(9, 181, 239);
+  background-color:  blue);
 }
 ul {
   list-style-type: none;
@@ -11,7 +11,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: red;
+  background-color: black;
 }
 
 ul li {
@@ -20,7 +20,7 @@ ul li {
 
 ul li a {
   display: block;
-  color: white;
+  color: blue;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
