--- a/opmaak.css
+++ b/opmaak.css
@@ -11,7 +11,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
 }
 
 ul li {
