--- a/opmaak.css
+++ b/opmaak.css
@@ -1,6 +1,7 @@
 body {
   background-color:  black;
 }
+h1 { color: white; text-align: center;}
 h2 { color: white; text-align:center;}
 ul {
   list-style-type: none;
