--- a/opmaak.css
+++ b/opmaak.css
@@ -1,5 +1,5 @@
 body {
-  background-color:  black;
+  background-color:  rgb(158, 220, 223);
 }
 h1 { color: white; text-align: center;}
 h3 { color: white; text-align:center;}
