--- a/opmaak.css
+++ b/opmaak.css
@@ -1,6 +1,14 @@
 body {
   background-color:  rgb(158, 220, 223);
+}body, .application-main {
+    background-color: cyan
+    color: black   
 }
+
+header.Header, footer.Footer {
+    background-color: #00b7eb
+}
+
 h1 { color: white; text-align: center;}
 h3 { color: white; text-align:center;}
 ul {
