--- a/opmaak.css
+++ b/opmaak.css
@@ -32,8 +32,11 @@ ul li a {
 
 ul li a:hover {
   background-color: black;
+}
+
 H4 { color: white; text-align: center;
 }
+
 
 h1 {
   color: rgb(243, 8, 47);
