--- a/opmaak.css
+++ b/opmaak.css
@@ -4,6 +4,7 @@ body {
 p { color: white; text-align: center;} 
 
 h1 { color: white; text-align: center;}
+h2 { color: white; text-align: center;}
 h3 { color: white; text-align:center;}
 ul {
   list-style-type: none;
