--- a/opmaak.css
+++ b/opmaak.css
@@ -1,6 +1,9 @@
 body {
   background-color:  rgb(156, 241, 241); 
 }
+{
+  background-image: url (kleurmodellen.jpeg);
+}
 p { color: white; text-align: center;} 
 
 h1 { color: white; text-align: center;}
