--- a/opmaak.css
+++ b/opmaak.css
@@ -9,6 +9,10 @@ body {
 .compressie {
   background-image: repeating-conic-gradient(red 10%, yellow 20%);
 }
+
+.FutureStars {
+  background-image: repeating-radial-gradient(red, yellow 10%, green 15%);
+}
 p { color: white; text-align: center;} 
 
 h1 { color: white; text-align: center;}
