--- a/opmaak.css
+++ b/opmaak.css
@@ -8,7 +8,7 @@ body {
 }
 .compressie {
   background-image: repeating-conic-gradient(red 10%, yellow 20%);
-  
+}
 
 .FutureStars {
   background-image: repeating-radial-gradient(red, yellow 10%, green 15%);
