--- a/opmaak.css
+++ b/opmaak.css
@@ -8,6 +8,12 @@ body {
 }
 .compressie {
   background-image: repeating-conic-gradient(red 10%, yellow 20%);
+  background-color: #2c8c7a; /* groene kleur */
+  color: black;
+  padding: 20px;
+  margin: 15px 0;
+  border-radius: 10px;
+
 }
 
 .FutureStars {
