--- a/opmaak.css
+++ b/opmaak.css
@@ -85,10 +85,10 @@ h1 {
 }
 
 {
-    background-color: #d6cec1; /* lichte beige achtergrond */
+    background-color: #d6cec1; 
     font-family: Arial, sans-serif;
     padding: 20px;
-    color: #003d3f; /* donkere groene tekst */
+    color: #003d3f; 
 }
 
 h1 {
@@ -97,8 +97,8 @@ h1 {
 }
 
 .blok {
-    background-color: #2e8b75; /* groen-blauw kleur */
-    color: black; /* tekstkleur in blokken */
+    background-color: #2e8b75; 
+    color: black; 
     padding: 20;
     margin: 20 auto;
     border-radius: 12;
