--- a/opmaak.css
+++ b/opmaak.css
@@ -83,3 +83,10 @@ h1 {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     z-index: 1000;
 
+    .border {
+  background-color: rgb(0, 255, 187);
+  color: white;
+  border: 0px solid black;
+  margin: 20px;
+  padding: 20px;
+    }
