--- a/opmaak.css
+++ b/opmaak.css
@@ -87,6 +87,7 @@ h1 {
   background-color: rgb(0, 255, 187);
   color: white;
   border: 0px solid black;
+  border-radius: 20px;
   margin: 20px;
   padding: 20px;
     }
