--- a/opmaak.css
+++ b/opmaak.css
@@ -82,7 +82,7 @@ h1 {
     height: 180px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     z-index: 1000;
-
+}
     .border {
   background-color: rgb(0, 255, 187);
   color: white;
