--- a/opmaak.css
+++ b/opmaak.css
@@ -97,3 +97,12 @@ h1 {
   text-align: left;
   
     }
+        .border {
+  background-color: rgb(6, 50, 38);
+  color: white;
+  border: 0px solid black;
+  border-radius: 20px;
+  margin: 20px;
+  padding: 20px;
+  text-align: left;
+        }
