--- a/opmaak.css
+++ b/opmaak.css
@@ -97,7 +97,7 @@ h1 {
   text-align: left;
   
     }
-        .border {
+        .Border2 {
   background-color: rgb(6, 50, 38);
   color: white;
   border: 0px solid black;
